--- a/ETL_PIPELINE_VENKAT.ipynb
+++ b/ETL_PIPELINE_VENKAT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "459310ab-8e61-4aeb-baae-255dfa1ee5a4",
    "metadata": {},
    "outputs": [
@@ -10,21 +10,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New movie list is: ['Purple_Rain', 'My_Motherland', 'Open_Your_Eyes_Jeffrey', 'Guns_Of_Redemption', 'The_Visitor_2024', 'The_Way_My_Way', 'Play_It_As_It_Lays', 'The_Corpse', 'A_Match', 'You_Burn_Me', 'Ufc_313_Pereira_Vs_Ankalaev']\n",
-      "🍅 Fetching Latest Movies from Rotten Tomatoes...\n",
-      "✅ Fetched 11 movies from Rotten Tomatoes!\n",
+      "[]\n",
+      "Fetch movie titles from Rotten tomatoes and Box Office Mojo...\n",
+      "\n",
+      "Total (11) movie titles found in Rotten Tomatos\n",
+      "\n",
+      "['Purple_Rain', 'My_Motherland', 'Open_Your_Eyes_Jeffrey', 'Guns_Of_Redemption', 'The_Visitor_2024', 'The_Way_My_Way', 'Play_It_As_It_Lays', 'The_Corpse', 'A_Match', 'You_Burn_Me'] \n",
+      "\n",
+      "Total (11) movie titles found in Box Office Mojo Website\n",
+      "\n",
+      "{'Flight Risk', 'Captain America: Brave New World', 'Den of Thieves: Pantera', 'Mufasa: The Lion King', 'Dog Man'} \n",
+      "\n",
+      "Combining the movie titles from Box Office Mojo and Rotten Tomatoes websites....\n",
+      "\n",
+      "['Flight Risk', 'Open_Your_Eyes_Jeffrey', 'The_Visitor_2024', 'A_Match', 'You_Burn_Me', 'Captain America: Brave New World', 'Den of Thieves: Pantera', 'Mufasa: The Lion King', 'Play_It_As_It_Lays', 'Guns_Of_Redemption', 'Ufc_313_Pereira_Vs_Ankalaev', 'Dog Man', 'My_Motherland', 'The_Way_My_Way', 'The_Corpse', 'Purple_Rain'] \n",
       "\n",
       "🚀 Fetching Data from OMDb API... 🎬\n",
       "❌ Movie not found: Open_Your_Eyes_Jeffrey\n",
       "❌ Movie not found: The_Visitor_2024\n",
+      "❌ Movie not found: Den of Thieves: Pantera\n",
       "❌ Movie not found: Ufc_313_Pereira_Vs_Ankalaev\n",
-      "✅ Fetched 8 movies successfully!\n",
+      "✅ Fetched 12 movies successfully!\n",
       "\n",
       "🔄 Transforming Data... 🧹\n",
-      "✨ Transformation Complete for 8 movies!\n",
+      "✨ Transformation Complete for 12 movies!\n",
       "\n",
       "💾 Saving Data to CSV... 📊\n",
-      "✅ Data successfully saved to movies_20250308_092111.csv!\n",
+      "✅ Data successfully saved to movies_20250308_162205.csv!\n",
       "\n"
      ]
     }
@@ -37,29 +49,64 @@
     "from datetime import datetime  # ✅ Added import for timestamp\n",
     "\n",
     "API_KEY = \"45056db6\"\n",
-    "\n",
+    "total_movie_titles = []\n",
     "# ---------------------- #\n",
     "# 1️⃣ Web Scraping Phase  #\n",
     "# ---------------------- #\n",
-    "def fetch_movies_from_rotten_tomatoes():\n",
-    "    print(\"🍅 Fetching Latest Movies from Rotten Tomatoes...\")\n",
-    "    url = \"https://www.rottentomatoes.com/browse/movies_in_theaters\"\n",
-    "    headers = {\"User-Agent\": \"Mozilla/5.0\"}\n",
+    "def fetch_movie_titles():\n",
+    "    print(\"Fetch movie titles from Rotten tomatoes and Box Office Mojo...\\n\")\n",
     "\n",
     "    try:\n",
-    "        response = requests.get(url, headers=headers)\n",
-    "        soup = BeautifulSoup(response.content, \"html.parser\")\n",
+    "        #Website1: Rotten Tomatoes\n",
+    "        rotten_tomatoes_url = \"https://www.rottentomatoes.com/browse/movies_in_theaters\"\n",
+    "        #Mimic the browser\n",
+    "        headers = {\"User-Agent\": \"Mozilla/5.0\"}\n",
+    "        response_rotten_tomatoes = requests.get(rotten_tomatoes_url, headers = headers)\n",
+    "        #Check the url is working or not\n",
+    "        if response_rotten_tomatoes.status_code != 200:\n",
+    "            print(f\"❌failed to fetch the data from Rotten Tomatoes. Status Code: {response_rotten_tomatoes.status_code}\")\n",
+    "            return []       \n",
+    "        #Parsing the HTML content from Box Office Mojo\n",
+    "        soup1 = BeautifulSoup(response_rotten_tomatoes.content, \"html.parser\")\n",
+    "        #Extract movie titles from Rotten Tomatoes website\n",
+    "        rotten_tomatoes_titles = [tag.get(\"href\").split(\"/\")[-1].replace(\"-\", \" \").title() \n",
+    "                                  for tag in soup1.select(\"a.js-tile-link\")]\n",
+    "        print(f\"Total ({len(rotten_tomatoes_titles)}) movie titles found in Rotten Tomatos\\n\")\n",
+    "        ##print(f\"✅ Fetched Movie Titles from 🍅 Rotten Tomatoes website...\\n\")\n",
+    "        print(rotten_tomatoes_titles[:10], \"\\n\") #It is not loading more than 10 movies\n",
     "\n",
-    "        titles = [tag.get(\"href\").split(\"/\")[-1].replace(\"-\", \" \").title() \n",
-    "                  for tag in soup.select('a.js-tile-link')]\n",
+    "        #Website2: Box Office Mojo\n",
+    "        box_office_mojo_url = \"https://www.boxofficemojo.com/weekend/\"\n",
+    "        response_box_office_mojo = requests.get(box_office_mojo_url, headers = headers)\n",
     "\n",
-    "        print(f\"✅ Fetched {len(titles)} movies from Rotten Tomatoes!\\n\")\n",
-    "        return titles[:30]\n",
+    "        #Check the url is working or not\n",
+    "        if response_box_office_mojo.status_code != 200:\n",
+    "            print(f\"❌failed to fetch the data from Box Office Mojo. Status Code: {response_box_office_mojo.status_code}\")\n",
+    "            return []\n",
+    "        \n",
+    "        #Parsing the HTML content from Box Office Mojo\n",
+    "        soup2 = BeautifulSoup(response_box_office_mojo.text, \"html.parser\")\n",
+    "        ##Extract movie titles from Box office mojo\n",
+    "        box_office_mojo_titles = [tag.get_text(strip=True)\n",
+    "                              for tag in soup2.select(\"td.a-text-left.mojo-field-type-release a.a-link-normal\")]\n",
+    "        print(f\"Total ({len(box_office_mojo_titles)}) movie titles found in Box Office Mojo Website\\n\")\n",
+    "        #print(soup.prettify())\n",
+    "        print(set(box_office_mojo_titles[:20]),\"\\n\")\n",
+    "        #return box_office_mojo_titles\n",
+    "        total_movie_titles = list(set(rotten_tomatoes_titles + box_office_mojo_titles))\n",
+    "        ##print(f\"Total ✅ Fetched movies from Rotten Tomatoes and Box Office Mojo is {total_movie_titles}\\n\")\n",
+    "        print(\"Combining the movie titles from Box Office Mojo and Rotten Tomatoes websites....\\n\")\n",
+    "        print(total_movie_titles,\"\\n\")\n",
+    "        return total_movie_titles\n",
     "\n",
     "    except requests.exceptions.RequestException as e:\n",
-    "        print(f\"❌ Error while scraping Rotten Tomatoes: {e}\")\n",
-    "        return []\n",
-    "print(\"New movie list is:\",titles)\n",
+    "        print(f\"❌ Error while scapping Rotten Tomatoes: {e}\")\n",
+    "        return[]\n",
+    "\n",
+    "# Test the function\n",
+    "#titles = fetch_movie_titles()\n",
+    "print(total_movie_titles)\n",
+    "\n",
     "# ---------------------- #\n",
     "# 2️⃣ Extract Phase       #\n",
     "# ---------------------- #\n",
@@ -201,7 +248,7 @@
     "# 🚀 Execute ETL Pipeline #\n",
     "# ---------------------- #\n",
     "if __name__ == \"__main__\":\n",
-    "    titles = fetch_movies_from_rotten_tomatoes()\n",
+    "    titles = fetch_movie_titles()\n",
     "    if titles:\n",
     "        movies = extract_movies(titles)\n",
     "        if movies:\n",
